manifests/istiod-default.yaml
# If istio install doesn't have a default revision, apply this config to set it up.
apiVersion: v1
kind: Service
metadata:
  labels:
    app: istiod
    istio: pilot
  name: istiod
  namespace: istio-system
spec:
  ports:
  - name: grpc-xds
    port: 15010
    protocol: TCP
    targetPort: 15010
  - name: https-dns
    port: 15012
    protocol: TCP
    targetPort: 15012
  - name: https-webhook
    port: 443
    protocol: TCP
    targetPort: 15017
  - name: http-monitoring
    port: 15014
    protocol: TCP
    targetPort: 15014
  selector:
    app: istiod
    istio.io/rev: v1-11
  type: ClusterIP
