manifests/sidecar-imports.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Sidecar
metadata:
  name: default
spec:
  egress:
    - hosts:
          - ./*
          - istio-system/*
